--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">Logo</a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#content">
@@ -102,28 +102,37 @@
             </div>    
         </div>
     </div>
-    <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-        <div class="card-header">Contact</div>
-        <div class="card-body">
-          <h5 class="card-title">Details</h5>
-          <p class="card-text">Gmail : madhanpanja@gmail.com</p>
+    <!--card-->
+<div class="row row-cols-1 row-cols-md-3 g-0">
+    <div class="col">
+        <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+            <div class="card-header">Contact</div>
+            <div class="card-body">
+              <h5 class="card-title">Details</h5>
+              <p class="card-text">Gmail : madhanpanja@gmail.com</p>
+            </div>
         </div>
     </div>
-    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="col">
+        <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+              <h5 class="card-title">Title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum a quia eius suscipit perspiciatis distinctio facere saepe ipsum temporibus officia? Soluta, nemo? Corrupti necessitatibus quas animi. Error tempora dolorum et.</p>
+            </div>
         </div>
     </div>
-    <div class="card" style="width: 400px;">
-        <img src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo-shadow.png" class="card-img-top" alt="bs5-icon">
-        <div class="card-body">
-          <h5 class="card-title">Bootstrap-5</h5>
-          <p class="card-text">Bootstrap 5 is the newest version of Bootstrap, which is the most popular HTML, CSS, and JavaScript framework for creating responsive, mobile-first websites. Bootstrap 5 is completely free to download and use!</p>
-          <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" class="btn btn-primary">Official Page</a>
+    <div class="col">
+        <div class="card" style="width: 400px;">
+            <img src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo-shadow.png" class="card-img-top" alt="bs5-icon">
+            <div class="card-body">
+              <h5 class="card-title">Bootstrap-5</h5>
+              <p class="card-text">Bootstrap 5 is the newest version of Bootstrap, which is the most popular HTML, CSS, and JavaScript framework for creating responsive, mobile-first websites. Bootstrap 5 is completely free to download and use!</p>
+              <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" class="btn btn-primary">Official Page</a>
+            </div>
         </div>
-      </div>
+    </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
