--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </div>
         </div>
     </div>
-    <div class="accordion">
+    <!--Accordion-->
+    <div class="accordion mt-2 ms-3 me-3">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#item-1">
@@ -103,18 +104,18 @@
         </div>
     </div>
     <!--card-->
-<div class="row row-cols-1 row-cols-md-3 g-0">
-    <div class="col">
-        <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-            <div class="card-header">Contact</div>
+<div class="row row-cols-1 row-cols-md-3 g-10 mt-4 ms-3 me-3">
+    <div class="col ms-auto me-auto">
+        <div class="card text-white bg-success mb-3">
+            <div class="card-header" class="text-white" style="text-decoration: none";>Contact</div>
             <div class="card-body">
               <h5 class="card-title">Details</h5>
               <p class="card-text">Gmail : madhanpanja@gmail.com</p>
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+    <div class="col ms-auto me-auto">
+        <div class="card text-white bg-primary mb-3">
             <div class="card-header">Header</div>
             <div class="card-body">
               <h5 class="card-title">Title</h5>
@@ -122,8 +123,8 @@
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="card" style="width: 400px;">
+    <div class="col ms-auto me-auto">
+        <div class="card">
             <img src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo-shadow.png" class="card-img-top" alt="bs5-icon">
             <div class="card-body">
               <h5 class="card-title">Bootstrap-5</h5>
@@ -131,6 +132,20 @@
               <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" class="btn btn-primary">Official Page</a>
             </div>
         </div>
+    </div>
+</div>
+<div class="container-fluid bg-dark text-white">
+    <div class="row mb-3">
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+    </div>
+    <div class="row">
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
+        <div class="col-3"><a href="#" class="text-white" style="text-decoration: none";>Contact</a></div>
     </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
